--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>net.apnic.mrt</groupId>
     <artifactId>mrt</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.5</version>
     <packaging>jar</packaging>
 
     <name>Java MRT File Dumper</name>
